--- a/client/public/index.css
+++ b/client/public/index.css
@@ -112,11 +112,25 @@ button {
 
 
 /** image gallery **/
+.image_container_po {
+  position: relative;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+}
+
 .image_gallery_po {
   display: flex;
-  width: 60%;
-  background-color: white;
-  background-position: 50% 20%;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0px;
+}
+
+.main_image_po {
+ object-fit: cover;
+ width: 100%;
+ height: 100%;
 }
 
 .thumbnails_po {
@@ -124,8 +138,11 @@ button {
   flex-direction: column;
   align-items: center;
   width: 14%;
-  background-color: rgba(255, 255, 255, 0.5)
+  background-color: rgba(255, 255, 255, 0.5);
+  /* position: relative;
+  top: 0px; */
 }
+
 
 .thumbnail_frame_po {
   display: flex;
@@ -166,26 +183,43 @@ button {
   justify-content: space-between;
   align-items: center;
   width: 5%;
+
 }
+
+.arrow_left_po, .arrow_right_po {
+  height: 30px;
+}
+
 
 .ri-arrow-left-s-line, .ri-arrow-right-s-line {
   color: white;
   font-size: 36px;
 }
 
+
+
 .arrow_space_po {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 40%;
+  height: 50%;
   width: 100%;
+  cursor: zoom-in;
+
 }
 
-.hover_fullscreen_button_po {
+.space01_po {
+  cursor: zoom-in;
+  /* position: relative;
+  top: 0px;
+  z-index: 3; */
+}
+
+/* .hover_fullscreen_button_po {
   height: 20px;
   width: 20px;
   background-color: yellow;
-}
+} */
 
 /* .fullscreen_button_po {
   margin: 5px 0px;
