Thumbnail select highlight complete
Change index to photoIndex. Change variables to be more descriptive.

--- a/client/public/index.css
+++ b/client/public/index.css
@@ -153,6 +153,10 @@ button {
   overflow: hidden;
 }
 
+.thumb_selected_po {
+  border: 4px solid var(--mustard);
+}
+
 .thumbnail_box_po {
   max-width: 100%;
 }
@@ -393,7 +397,7 @@ button {
 }
 
 .style_row_thumbnail_po {
-  height: 130px;
+  height: 136px;
   width: 270px;
   display: flex;
   flex-direction: row;
