--- a/client/public/index.css
+++ b/client/public/index.css
@@ -234,7 +234,8 @@ button {
 
 }
 
-/** expanded image **/
+
+/*todo *** *** *** *** expanded image *** *** *** *** */
 
 .main_image_exp_po {
   background-image: '';
@@ -282,7 +283,7 @@ button {
   height: 10%;
   width:100%;
 }
-/*todo ** ** ** ** ** ** ** ** ** ** CHANGES HERE ** ** ** ** ** ** ** ** ** ** **/
+
 .image_icon_bar_po {
   /* background-color: yellowgreen; */
   display: flex;
@@ -363,7 +364,9 @@ button {
 }
 
 
-/** product style **/
+
+/*todo *** *** *** *** product style *** *** *** *** */
+
 .style_po {
   display: flex;
   flex-direction: column;
@@ -425,7 +428,9 @@ position: relative
 }
 
 
-/** add to bag **/
+
+/*todo *** *** *** *** add to bag *** *** *** *** */
+
 .add_to_bag_po {
   display: flex;
   flex-direction: column;
@@ -438,9 +443,30 @@ position: relative
   height: 50%;
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
 }
+
+
+/*todo ** ** ** ** ** ** ** ** ** ** CHANGES HERE ** ** ** ** ** ** ** ** ** ** **/
+
+.size_menu_po {
+  width: 150px;
+  position: flex-start;
+  top: 0px;
+  z-index: 2;
+}
+
+.size_box {
+  /* visibility: hidden; */
+}
+
+.size_option_po .size_display_po {
+  background-color: white;
+  width: 150px;
+  height: 40px;
+}
+
 
 .size_select_po {
   width: 150px;
@@ -483,6 +509,7 @@ position: relative
 }
 
 /*todo *** *** *** *** description and features *** *** *** *** */
+
 .bottom01 {
   display: flex;
   width: 100%;
