--- a/client/public/index.css
+++ b/client/public/index.css
@@ -451,27 +451,46 @@ position: relative
 /*todo ** ** ** ** ** ** ** ** ** ** CHANGES HERE ** ** ** ** ** ** ** ** ** ** **/
 
 .size_menu_po {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 150px;
-  position: flex-start;
-  top: 0px;
+  /* position: flex-start; */
+  /* top: 0px; */
   z-index: 2;
+}
+
+.size_display_po {
+  display: inherit;
+  flex-direction: inherit;
+  justify-content: inherit;
+  align-items: inherit;
+  /* background-color: white; */
+  width: 100%;
+  height: 25px;
 }
 
 .size_box {
   /* visibility: hidden; */
+  display: inherit;
+  flex-direction: inherit;
+  justify-content: inherit;
+  /* align-items: inherit; */
 }
 
-.size_option_po .size_display_po {
-  background-color: white;
-  width: 150px;
-  height: 40px;
+.size_option_po {
+  background: gray;
+  color: white;
+  display: inherit;
+  /* flex-direction: inherit; */
+  align-items: center;
+  justify-content: inherit;
+  width: 130px;
+  height: 20px;
 }
 
 
-.size_select_po {
-  width: 150px;
-  height: 40px;
-}
 
 .dropdown_space_po {
   width: 20px;
@@ -484,9 +503,15 @@ position: relative
   z-index: 2;
 }
 
-/* .quantity_body_po {
-  visibility: hidden;
-} */
+.quantity_display_po {
+ width: 30px;
+ height: 25px;
+}
+
+.quantity_body_po {
+ width: 20px;
+ height: 20px;
+}
 
 /* .qty_select_po {
   width: 75px;
