--- a/client/public/index.css
+++ b/client/public/index.css
@@ -455,10 +455,10 @@ position: relative
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 150px;
   /* position: flex-start; */
   /* top: 0px; */
   z-index: 2;
+  width: 150px;
 }
 
 .size_display_po {
@@ -490,6 +490,16 @@ position: relative
   height: 20px;
 }
 
+.out_of_stock_po {
+  background: lightgrey;
+  display: inherit;
+  flex-direction: inherit;
+  justify-content: inherit;
+  align-items: inherit;
+  /* background-color: white; */
+  width: 100%;
+  height: 25px;
+}
 
 
 .dropdown_space_po {
@@ -499,17 +509,29 @@ position: relative
 .quantity_menu_po {
   display: flex;
   flex-direction: column;
-  position: static;
+  justify-content: center;
+  align-items: center;
   z-index: 2;
+  width: 35px;
 }
 
 .quantity_display_po {
- width: 30px;
- height: 25px;
+  display: inherit;
+  flex-direction: inherit;
+  justify-content: inherit;
+  align-items: inherit;
+  width: 100%;
+  height: 25px;
 }
 
 .quantity_body_po {
- width: 20px;
+  background: gray;
+  color: white;
+  display: inherit;
+  /* flex-direction: inherit; */
+  align-items: center;
+  justify-content: inherit;
+ width: 25px;
  height: 20px;
 }
 
