--- a/client/public/index.css
+++ b/client/public/index.css
@@ -441,52 +441,37 @@ position: relative
 
 .add_to_bag_top_po {
   height: 50%;
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
 }
 
 
 /*todo ** ** ** ** ** ** ** ** ** ** CHANGES HERE ** ** ** ** ** ** ** ** ** ** **/
 
 .size_menu_po {
+  grid-column: 2 / 7;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  /* position: flex-start; */
-  /* top: 0px; */
   z-index: 2;
-  width: 150px;
+  height: 25px;
+  margin: 10px 0px;
 }
 
 .size_display_po {
   display: inherit;
-  flex-direction: inherit;
-  justify-content: inherit;
+  justify-content: center;
   align-items: inherit;
-  /* background-color: white; */
   width: 100%;
-  height: 25px;
 }
 
-.size_box {
-  /* visibility: hidden; */
-  display: inherit;
-  flex-direction: inherit;
-  justify-content: inherit;
-  /* align-items: inherit; */
-}
-
-.size_option_po {
+.size_body_po {
   background: gray;
   color: white;
   display: inherit;
-  /* flex-direction: inherit; */
   align-items: center;
-  justify-content: inherit;
-  width: 130px;
+  justify-content: center;
+  width: 80%;
   height: 20px;
 }
 
@@ -496,56 +481,41 @@ position: relative
   flex-direction: inherit;
   justify-content: inherit;
   align-items: inherit;
-  /* background-color: white; */
   width: 100%;
   height: 25px;
 }
 
-
-.dropdown_space_po {
-  width: 20px;
-}
-
 .quantity_menu_po {
+  grid-column: 8/ 10;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   z-index: 2;
-  width: 35px;
+  height: 25px;
+  margin: 10px 0px;
 }
 
 .quantity_display_po {
   display: inherit;
-  flex-direction: inherit;
-  justify-content: inherit;
+  justify-content: center;
   align-items: inherit;
   width: 100%;
-  height: 25px;
 }
 
 .quantity_body_po {
   background: gray;
   color: white;
   display: inherit;
-  /* flex-direction: inherit; */
   align-items: center;
-  justify-content: inherit;
- width: 25px;
+  justify-content: center;
+ width: 80%;
  height: 20px;
 }
-
-/* .qty_select_po {
-  width: 75px;
-  height: 40px;
-} */
 
 .add_to_bag_bottom_po {
   height: 50%;
   display: grid;
-  grid-template-columns: 10fr 1fr 8fr;
-  align-items: center;
-  justify-content: center;
+  grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
 }
 
 .add_to_bag_bottom_left_po {
@@ -557,13 +527,17 @@ position: relative
 }
 
 .add_to_bag_button_po {
+  grid-column: 2 / 6;
   width: 130px;
   height: 50%;
+  margin: 10px 0px;
 }
 
 .favorites_add_button_po {
+  grid-column: 7 / 10;
   width: 95px;
   height: 50%;
+  margin: 10px 0px;
 }
 
 /*todo *** *** *** *** description and features *** *** *** *** */
