create imageUrl editing functions
currently set for normal urls. can be set to change all urls to jpg. other formats available. still need to determine other areas for function placement.

--- a/client/public/index.css
+++ b/client/public/index.css
@@ -533,7 +533,7 @@ position: relative
   margin: 10px 0px;
   border-radius: 4px;
   border: solid 1px black;
-  justify-content: center;
+  /* justify-content: center; */
 }
 
 .quantity_display_po {
