--- a/client/public/index.css
+++ b/client/public/index.css
@@ -1155,19 +1155,19 @@ border: none;
   cursor: pointer;
 }
 
-.entry {
+.reviewEntry_container {
+  width: 100%;
+  /* height: 80%; */
+  overflow-y: scroll;
+  border: none;
+  margin-bottom: 10px;
+}
+
+.reviewEntry {
   border: none;
   border-bottom: 1px solid;
   margin-top: 7px;
   margin-right: 7px;
-}
-
-.entry_container {
-  width: 100%;
-  height: 80%;
-  overflow-y: scroll;
-  border: none;
-  margin-bottom: 10px;
 }
 
 .wrapper_RT {
@@ -1380,13 +1380,14 @@ progress::-webkit-progress-value {
   border: none;
   display: flex;
   flex-direction: row;
+  margin-left: 75px;
 }
 
 .filterMessage {
   border: none;
   margin-left: 10px;
   margin-right: 10px;
-  font-size: 15px;
+  font-size: 12px;
   font-style: italic;
   color: rgb(128, 124, 124);
 }
