--- a/client/public/index.css
+++ b/client/public/index.css
@@ -193,7 +193,7 @@ html {
   justify-content: center;
   width: 20px;
   height: 15px;
-  margin: 0px;
+  margin: 5px 0px;
   overflow: hidden;
   transform: scale(2.5, 1);
 }
@@ -463,6 +463,7 @@ position: relative
 /*todo *** *** *** *** add to bag *** *** *** *** */
 
 .add_to_bag_po {
+  position: relative;
   display: flex;
   flex-direction: column;
   height: 22%;
@@ -578,19 +579,35 @@ position: relative
 .size_alert_po{
   visibility: hidden;
   position: absolute;
-  top: 437px;
-  right: 306px;
+  top: -12px;
+  left: 23px;
   z-index: 3;
   background: var(--mustard);
   padding: 0px 5px;
   border-radius: 4px;
   border: solid 2px var(--mustard-shadow);
+  width: 150px;
+  text-align: center;
 }
 .favorites_add_button_po {
   grid-column: 7 / 10;
   /* width: 95px; */
   height: 50%;
   margin: 10px 0px;
+  /* height: 25px; */
+  border-radius: 4px;
+  border: solid 1px black;
+  text-align: center;
+}
+
+.favorites_on_po {
+  background: var(--mustard);
+  border: solid 1px var(--mustard-shadow);
+}
+
+.favorites_off_po {
+  background: lightgrey;
+  border: solid 1px black;
 }
 
 /*todo *** *** *** *** description and features *** *** *** *** */
