--- a/client/public/index.css
+++ b/client/public/index.css
@@ -83,6 +83,7 @@ html {
   width: 100%;
   color: white;
   background-color: #555555;
+  background: var(--mustard-shadow);
 }
 
 .top_text {
@@ -597,15 +598,25 @@ position: relative
   /* height: 25px; */
   border-radius: 4px;
   border: solid 1px black;
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.ri-star-line {
+  font-size: 24px;
 }
 
 .favorites_on_po {
+  color: var(--mustard-shadow);
+  font-size: 24px;
   background: var(--mustard);
   border: solid 1px var(--mustard-shadow);
 }
 
 .favorites_off_po {
+  color: gray;
+  font-size: 24px;
   background: lightgrey;
   border: solid 1px black;
 }
