--- a/client/public/index.css
+++ b/client/public/index.css
@@ -1433,16 +1433,27 @@ progress::-webkit-progress-value {
 }
 
 .stars-outer::before {
+  content: '\f18b \f18b \f18b \f18b \f18b';
+  font-family: 'remixicon' !important;
+}
+
+/* .stars-outer::before {
   content: '\f005 \f005 \f005 \f005 \f005';
   font-family: 'Font Awesome 5 Free';
   font-weight: 200;
-}
+} */
 
 .stars-inner::before {
+  content: '\f186 \f186 \f186 \f186 \f186';
+  font-family: 'remixicon' !important;
+}
+
+/* .stars-inner::before {
   content: '\f005 \f005 \f005 \f005 \f005';
   font-family: 'Font Awesome 5 Free';
   font-weight: 900;
-}
+} */
+
 
 .filter {
   border: none;
