switched breakdown icon to remixIcon

--- a/client/public/index.css
+++ b/client/public/index.css
@@ -1441,6 +1441,19 @@ progress::-webkit-progress-value {
   content: '\f186 \f186 \f186 \f186 \f186';
   font-family: 'remixicon' !important;
 }
+.breakdownIcon::before{
+  content: '\ea4d';
+  font-family: 'remixicon' !important;
+  position: absolute;
+  /* left: 100px; */
+  z-index: 3;
+ }
+
+ .breakdownIcon {
+   position: absolute;
+   bottom: 12px;
+   font-size: 15px;
+ }
 
 .filter {
   border: none;
@@ -1474,6 +1487,7 @@ progress::-webkit-progress-value {
   font-size: 12px;
   width: 240px;
   margin: 12px 0 12px 0;
+  position: relative;
 }
 
 .characteristicName {
