--- a/client/public/index.css
+++ b/client/public/index.css
@@ -1161,7 +1161,6 @@ border: none;
   flex-direction: row;
   width: 900px;
   height: 650px;
-  margin-left: 40px;
   border: none;
   text-align: left;
   justify-content: center;
@@ -1170,7 +1169,6 @@ border: none;
 
 .reviewsTitle {
   border: none;
-  margin-left: 85px;
   border-style: none;
   color: var(--global-border-color);
 }
@@ -1182,7 +1180,7 @@ border: none;
   height: 580px;
   border: none;
   margin-top: 10px;
-  margin-left: 40px;
+  margin-left: 60px;
 }
 
 .ratings_container {
@@ -1193,7 +1191,8 @@ border: none;
   height: 500px;
   color: rgb(59, 58, 58);
   border: none;
-  margin: 31px 40px 0px 50px;
+  margin-left:110px;
+  margin-right: 30px;
 }
 
 .ratingsContent {
@@ -1224,8 +1223,7 @@ border: none;
 }
 
 .reviewEntry_container {
-  width: 100%;
-  /* height: 80%; */
+  width: 740px;
   overflow-y: scroll;
   border: none;
   margin-bottom: 10px;
