--- a/client/public/index.css
+++ b/client/public/index.css
@@ -1545,7 +1545,8 @@ text-align: right;
   top: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(87, 59, 59, 0.938);
+  background-color: rgba(255, 219, 88, 0.75);
+  backdrop-filter: blur(2px);
   display: flex;
   align-items: center;
   justify-content: center;
