--- a/client/public/index.css
+++ b/client/public/index.css
@@ -1365,7 +1365,7 @@ border: none;
   margin-top: 20px;
   height: 150px;
   width: 240px;
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
   border: none;
 }
 
@@ -1375,7 +1375,7 @@ border: none;
   height: 300px;
   font-size: 10px;
   border: none;
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
 }
 
 .starTotalReviews {
@@ -1687,18 +1687,68 @@ p {
 /* dark mode override */
 .dm {
   color: rgb(236, 236, 236);
-  background: rgb(54, 54, 54);
+  background: var(--dark-mode-dark);
 }
 
 .dm2 {
-  background: rgb(94, 94, 94, 0.6);
+  background: rgba(253, 231, 231, 0.6);
 }
 
-/* body {
-  background: rgb(54, 54, 54);
-
-} */
-
-.scrollable-element {
-  scrollbar-color: grey rgb(54, 54, 54);
+.dmTNB {
+  background: rgb(55, 55, 55, 0.6);
 }
+
+.reviewEntry_container::-webkit-scrollbar,
+.questionList::-webkit-scrollbar,
+.prod-cards-wrapper::-webkit-scrollbar,
+body::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+  }
+
+
+  .reviewEntry_container::-webkit-scrollbar-track,
+  .questionList::-webkit-scrollbar-track,
+  .prod-cards-wrapper::-webkit-scrollbar-track,
+body::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 3px rgba(255,255,255,0.3);
+  border-radius: 5px;
+  outline: 1px solid var(--dark-mode-light);
+  }
+
+
+  .reviewEntry_container::-webkit-scrollbar-thumb,
+  .questionList::-webkit-scrollbar-thumb,
+  .prod-cards-wrapper::-webkit-scrollbar-thumb,
+body::-webkit-scrollbar-thumb {
+  background-color: var(--mustard-shadow);
+  outline: 1px solid var(--dark-mode-light);
+  border-radius: 5px;
+  }
+
+
+.style_row_thumbnail_po::-webkit-scrollbar {
+  width: 6px;
+  }
+
+
+.style_row_thumbnail_po::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.3);
+  border-radius: 3px;
+  outline: 1px solid var(--dark-mode-light);
+  }
+
+
+.style_row_thumbnail_po::-webkit-scrollbar-thumb {
+  background-color: var(--mustard-shadow);
+  outline: 1px solid var(--dark-mode-light);
+  border-radius: 3px;
+  }
+
+  :root {
+    --dark-mode-light: rgb(90, 90, 90);
+    --dark-mode-dark: rgb(44, 44, 44);
+    /* --mustard: #FFDB58;
+    --mustard-shadow: #d09821;
+    --global-border-color: rgb(125, 125, 125); */
+  }
