--- a/client/public/index.css
+++ b/client/public/index.css
@@ -846,9 +846,7 @@ position: relative
   position: fixed;
   width: var(--comparison-width);
   z-index: 1;
-/*
-  background-color: rgba(255, 255, 255, 0.804); */
-  background: var(--mustard-light);
+  background-color: rgba(255, 255, 255, 0.804);
   backdrop-filter: blur(5px);
   text-align: center;
   pointer-events: none;
@@ -1697,12 +1695,17 @@ p {
   background: var(--dark-mode-dark);
 }
 
-.dm2 {
-  background: rgba(253, 231, 231, 0.6);
+.dmSB {
+  color: rgb(236, 236, 236);
+  background: var(--dark-mode-light);
 }
 
 .dmTNB {
   background: rgb(55, 55, 55, 0.6);
+}
+
+#dmPC {
+  color: rgb(236, 236, 236);
 }
 
 .reviewEntry_container::-webkit-scrollbar,
