Revert persisting product and styles

--- a/client/public/index.css
+++ b/client/public/index.css
@@ -28,6 +28,10 @@ html {
   color: grey;
 }
 
+button {
+  cursor: pointer;
+}
+
 /* GLOBAL VARIABLES */
 
 :root {
@@ -1732,52 +1736,49 @@ p {
 body::-webkit-scrollbar {
   width: 10px;
   height: 10px;
-  }
+}
 
 
-  .reviewEntry_container::-webkit-scrollbar-track,
-  .questionList::-webkit-scrollbar-track,
-  .prod-cards-wrapper::-webkit-scrollbar-track,
+.reviewEntry_container::-webkit-scrollbar-track,
+.questionList::-webkit-scrollbar-track,
+.prod-cards-wrapper::-webkit-scrollbar-track,
 body::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 3px rgba(255,255,255,0.3);
   border-radius: 5px;
-  outline: 1px solid var(--dark-mode-light);
-  }
+  outline: none;
+}
 
 
-  .reviewEntry_container::-webkit-scrollbar-thumb,
-  .questionList::-webkit-scrollbar-thumb,
-  .prod-cards-wrapper::-webkit-scrollbar-thumb,
+.reviewEntry_container::-webkit-scrollbar-thumb,
+.questionList::-webkit-scrollbar-thumb,
+.prod-cards-wrapper::-webkit-scrollbar-thumb,
 body::-webkit-scrollbar-thumb {
   background-color: var(--mustard-shadow);
-  outline: 1px solid var(--dark-mode-light);
+  outline: none;
   border-radius: 5px;
-  }
+}
 
 
 .style_row_thumbnail_po::-webkit-scrollbar {
   width: 6px;
-  }
+}
 
 
 .style_row_thumbnail_po::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.3);
   border-radius: 3px;
   outline: 1px solid var(--dark-mode-light);
-  }
+}
 
 
 .style_row_thumbnail_po::-webkit-scrollbar-thumb {
   background-color: var(--mustard-shadow);
   outline: 1px solid var(--dark-mode-light);
   border-radius: 3px;
-  }
+}
 
 :root {
   --dark-mode-light: rgb(90, 90, 90);
   --dark-mode-dark: rgb(44, 44, 44);
-  /* --mustard: #FFDB58;
-  --mustard-shadow: #d09821;
-  --global-border-color: rgb(125, 125, 125); */
 }
 
