--- a/client/public/index.css
+++ b/client/public/index.css
@@ -1077,9 +1077,13 @@ td {
   font-weight: bold;
   width: 50%;
   height: 100px;
-  background-color: black;
-  color: white;
+  background-color: white;
+  color: black;
   padding: 0px;
+}
+
+.modal-footer-button:hover {
+  background-color: var(--mustard);
 }
 
 .submit-button {
